--- a/lab02/lab01/chang-bio.html
+++ b/lab02/lab01/chang-bio.html
@@ -17,9 +17,9 @@
             <h2>Favorite Movies</h2>
 
 <ol>
-  <li>1 - Star Wars</li>
-  <li>2 - Avengers Endgame</li>
-  <li>3 - Shawshank Redemption</li>
+  <li>Star Wars</li>
+  <li>Avengers Endgame</li>
+  <li>Shawshank Redemption</li>
 </ol>   
        <hr>
        &copy;2020
